# Pomodoro

./: .gitignore  CMakeLists.txt  Main.cpp  Pie.cpp  Pie.h  PieSlice.cpp  PieSlice.h  Pomodoro.pro  Pomodoro.qml  README.md  main.cpp  qml.qrc
